# glossa

./: .env.example  .gitignore  app.spec  main.py  pyproject.toml  readme.md  xxx.py
.github/workflows/: ci.yml  release.yml
app/: application.py  loggers.py  single_instance.py
app/config/: di.py  environment.py
app/services/: autostart.py  settings_store.py  system_hotkeys_guard.py
app/ui/: settings_window.py
engine/: keyboard_hook.py  keyboard_layout_manager.py  keyboard_layout_manager_setup.py  loggers.py
engine/dto/: key_combination.py  keyboard_layout.py  keyboard_layout_id.py
engine/interfaces/: keyboard_hook_interface.py  keyboard_hook_intreface.py  keyboard_layout_registry_interface.py  keyboard_layout_switcher_interface.py  keyboard_layout_switching_system_settings_interface.py
engine/windows/: keyboard_layout_id.py  keyboard_layout_registry.py  keyboard_layout_switcher.py  keyboard_layout_switching_settings.py
installer/: glossa.iss
tests/: conftest.py  test_keyboard_hook.py  test_manager_carousel.py  test_settings_store.py  test_setup.py  test_system_hotkey_mapping.py  test_windows_integration.py
