[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "glossa"
version = "0.2.1"
requires-python = ">=3.12"
dependencies = [
    "nexus-kit~=0.4.8",
    "keyboard~=0.13.5",
    "PySide6~=6.9",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.21.0",
    "pytest~=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app", "engine"]
